add messaging kafka connector retries